--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,48 +1,17 @@
 .App {
   text-align: center;
+  padding: 0;
+  margin: 0;
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  overflow-y: overlay;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body::-webkit-scrollbar{
+  background-color: transparent;
+  width: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  flex: 1 1 auto;
-}
-@media screen and (min-width: 768px) {  input[type="text"],
-  input[type="number"],
-  button {
-    margin: 0 0.5em;
-  }
+body::-webkit-scrollbar-thumb{
+  background-color: rgb(112, 112, 112);
 }
