--- a/frontend/src/static/css/content.css
+++ b/frontend/src/static/css/content.css
@@ -1,67 +1,84 @@
 .content_holder {
     position: relative;
     padding: 0;
-    width: auto;
+    width: 100vw;
 }
 
 .img_contn img {
     position: absolute;
-    width: 400px;
-    top: 15px;
-    right: 10px;
+    width: 343px;
+    height: 505px;
+    top: 60px;
+    right: 120px;
+    animation-name: diamond;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
 }
 
 .contn {
-    font-family: 'Courier Newvh', Courier, monospace;
-    padding-left: 35px;
-    font-weight: bold;
-    margin-top: 15vh;
-    font-size: 85px;
     color: white;
+    font-weight: 700;
+    font-size: 80px;
+    text-align: left;
+    width: 60%;
+    padding-top: 111px;
+    padding-left: 70px;
 }
-.contn div{
-    margin: 15px 0px;
-    font-size: 22px;
-    font-family: monospace;
-    color: rgb(130, 130, 130);
+
+.contn div {
+    margin: 25px 0px;
+    font-weight: 400;
+    font-size: 24px;
 }
 
 .bttn_holder {
     display: flex;
-    justify-content: center;
-    padding-top: 85px;
-    column-gap: 35px;
+    padding-top: 40px;
+    column-gap: 20px;
     height: 45px;
 }
 
 .bttn_holder input {
-    border-radius: 35px;
     padding: 0px 40px;
     font-size: 20px;
     cursor: pointer;
 }
-.bttn_holder_2{
+.bttn_holder_1{
+    border: 0;
+    color: black;
+    font-weight: bold;
+    background-color: #8AEAFF;
+}
+.bttn_holder_2 {
     background-color: transparent;
     color: white;
     border: 1px solid white;
 }
-.bttn_holder_2:hover{
+
+.bttn_holder_2:hover {
     color: black;
     background-color: white;
+}
+.bttn_holder_1:hover{
+    background-color: #1baccd;
+    color: white;
 }
 
 
 
-.card_list{
+.card_list {
     margin-top: 25vh;
     padding-bottom: 15px;
     text-align: center;
 }
-.heading_cards{
+
+.heading_cards {
     color: white;
     font-size: 45px;
 }
-.list_holder{
+
+.list_holder {
     margin: 50px 0px;
     display: flex;
     column-gap: 45px;
@@ -69,16 +86,34 @@
     width: 90vw;
     overflow-x: auto;
 }
-.list_holder::-webkit-scrollbar{
+
+.list_holder::-webkit-scrollbar {
     display: none;
 }
-.card_main{
+
+.card_main {
     color: white;
     background-color: rgb(160, 160, 160);
     border-radius: 15px;
 }
-.card_text{
+
+.card_text {
     padding: 20px;
     height: 350px;
     width: 480px;
+}
+
+
+/* Diamond Animation */
+@keyframes diamond {
+    0%{
+        filter: brightness(80%);
+        transform: rotateY(0deg);
+    }
+    50%{
+        filter: brightness(140%);
+    }
+    100%{
+        filter: brightness(80%);
+    }
 }
