--- a/frontend/src/static/css/navbar.css
+++ b/frontend/src/static/css/navbar.css
@@ -6,12 +6,15 @@
     display: flex;
     column-gap: 30vw;
     justify-content: center;
-    background-color: transparent;
+    /* background-color: transparent;*/
+    background-image: linear-gradient(7deg, rgb(11, 9, 80) 0%, black 69.63%);
 }
 
 /* left nav */
 .left_nav{
     padding: 10px 0px;
+    display: flex;
+    column-gap: 5px;
 }
 .left_nav a {
     text-decoration: none;
@@ -19,7 +22,11 @@
     font-size: 55px;
     font-weight: bolder;
     font-family: monospace;
-    font-style: italic;
+}
+.left_nav img{
+    margin-top: 10px;
+    height: 45px;
+    width: 45px;
 }
 
 /* Right nav */
@@ -35,8 +42,11 @@
     border: 0;
     border-radius: 15px;
     padding: 0px 25px;
-    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
     background-color: transparent;
+    color: white;
 }
 .right_nav button a{
     text-decoration: none;
