--- a/frontend/src/static/css/popup.css
+++ b/frontend/src/static/css/popup.css
@@ -1,4 +1,4 @@
-/* Lending popup */
+/* Borrow popup */
 .borrow_popup {
     display: none;
     position: absolute;
@@ -94,6 +94,28 @@
 .input_borrow input{
     width: 50%;
 }
-.lend_absent{
+.borrow_absent{
     height: 200px;
+}
+
+
+/* Lending Popup*/
+.lend_popup {
+    display: none;
+    position: absolute;
+    top: 1vw;
+    left: 10vw;
+    z-index: 2;
+    height: 40vw;
+    width: 80vw;
+    background-image: linear-gradient(129.8deg, #131835 21.79%, #5F1A4E 101.8%);
+    border-radius: 6px;
+}
+.lend_popup i{
+    position: absolute;
+    top: 0;
+    font-size: 35px;
+    right: 8px;
+    color: white;
+    cursor: pointer;
 }
