--- a/frontend/src/static/css/content.css
+++ b/frontend/src/static/css/content.css
@@ -27,7 +27,7 @@
 }
 
 .contn div {
-    margin: 25px 0px;
+    margin: 25px 5px;
     font-weight: 400;
     font-size: 24px;
 }
@@ -44,12 +44,14 @@
     font-size: 20px;
     cursor: pointer;
 }
-.bttn_holder_1{
+
+.bttn_holder_1 {
     border: 0;
     color: black;
     font-weight: bold;
     background-color: #8AEAFF;
 }
+
 .bttn_holder_2 {
     background-color: transparent;
     color: white;
@@ -60,60 +62,141 @@
     color: black;
     background-color: white;
 }
-.bttn_holder_1:hover{
+
+.bttn_holder_1:hover {
     background-color: #1baccd;
     color: white;
 }
 
-
-
-.card_list {
-    margin-top: 25vh;
-    padding-bottom: 15px;
-    text-align: center;
+/* Stats CSS */
+.nft_stats {
+    margin-top: 185px;
+    position: relative;
+    width: 100%;
+    height: 485px;
 }
 
-.heading_cards {
-    color: white;
-    font-size: 45px;
-}
-
-.list_holder {
-    margin: 50px 0px;
-    display: flex;
-    column-gap: 45px;
-    margin-left: 5vw;
-    width: 90vw;
-    overflow-x: auto;
-}
-
-.list_holder::-webkit-scrollbar {
-    display: none;
-}
-
-.card_main {
-    color: white;
-    background-color: rgb(160, 160, 160);
-    border-radius: 15px;
-}
-
-.card_text {
-    padding: 20px;
-    height: 350px;
+.left_stats {
+    margin-left: 70px;
+    text-align: left;
+    padding-top: 35px;
+    padding-left: 65px;
+    border-left: 4px solid #4C538F;
+    border-top: 4px solid #4C538F;
+    height: 230px;
     width: 480px;
+}
+
+.left_stats_one {
+    font-weight: 700;
+    font-size: 94px;
+    color: #8AEAFF;
+}
+
+.left_stats_two {
+    font-weight: 700;
+    font-size: 63px;
+    color: #FF00E6;
+}
+
+.left_stats_three {
+    font-weight: 400;
+    font-size: 18px;
+    color: white;
+}
+
+.right_stats {
+    width: 500px;
+    height: 90%;
+    position: absolute;
+    right: 100px;
+    top: 0;
+    background-image: linear-gradient(135deg, #8AEAFF, #FA00FF);
+}
+
+.right_stats_card {
+    position: absolute;
+    top: 2.5px;
+    left: 2.5px;
+    right: 2.5px;
+    bottom: 2.5px;
+    background: #0E152D;
+    padding: 35px;
+    text-align: left;
+}
+
+.total_stats_card {
+    display: flex;
+    column-gap: 65px;
+}
+
+.total_stats_card div {
+    font-weight: 700;
+    font-size: 27px;
+    color: #8AEAFF;
+}
+.total_stats_card span{
+    font-size: 24px;
+    color: white;
+}
+.interest_rates_card{
+    margin-top: 50px;
+    display: flex;
+    column-gap: 65px;
+}
+.left_card_interest{
+    width: 205px;
+    font-weight: 400;
+    color: #8AEAFF;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 11px;
+}
+.right_card_interest{
+    font-weight: 400;
+    color: white;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 11px;
+}
+.details_card{
+    margin-top: 70px;
+    display: flex;
+    column-gap: 65px;
+}
+.details_card_left{
+    width: 205px;
+    font-weight: 400;
+    color: #CB2BF2;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 11px;
+}
+.details_card_right{
+    font-weight: 400;
+    color: white;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 11px;
 }
 
 
 /* Diamond Animation */
 @keyframes diamond {
-    0%{
+    0% {
         filter: brightness(80%);
         transform: rotateY(0deg);
     }
-    50%{
+
+    50% {
         filter: brightness(140%);
     }
-    100%{
+
+    100% {
         filter: brightness(80%);
     }
 }
