--- a/frontend/src/static/css/popup.css
+++ b/frontend/src/static/css/popup.css
@@ -4,7 +4,7 @@
     position: absolute;
     top: 1vw;
     left: 10vw;
-    z-index: 2;
+    z-index: 4;
     height: 40vw;
     width: 80vw;
     background-image: linear-gradient(129.8deg, #131835 21.79%, #5F1A4E 101.8%);
@@ -111,7 +111,7 @@
     position: absolute;
     top: 1vw;
     left: 10vw;
-    z-index: 3;
+    z-index: 4;
     height: 40vw;
     width: 80vw;
     background-image: linear-gradient(131.46deg, #07132B 22.81%, #1D587A 99.86%);
@@ -171,4 +171,15 @@
 }
 .lend_section{
     text-align: left;
+}
+
+.hide_div{
+    position: absolute;
+    z-index: 3;
+    top: -80px;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
+    opacity: 60%;
+    display: none;
 }
