--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   padding: 0;
   margin: 0;
-  width: 100vw;
+  width: 100%;
   background-image: linear-gradient(122.82deg, rgb(11, 9, 80) 0%, black 69.63%);
 }
 
