--- a/frontend/src/static/css/portfolio.css
+++ b/frontend/src/static/css/portfolio.css
@@ -83,10 +83,12 @@
 .lend_history_card_holder {
     margin-top: 85px;
     display: flex;
+    column-gap: 35px;
     justify-content: left;
 }
 
 .lend_history_card {
+    position: relative;
     padding: 25px;
     background-image: linear-gradient(120deg, rgb(36, 10, 131), 70%, rgb(160, 19, 173));
     text-align: left;
@@ -120,4 +122,120 @@
 .lend_history_content2 span {
     font-weight: 400;
     font-size: 19px;
+}
+.portfolio_lend_bttn{
+    position: absolute;
+    right: 0;
+    padding: 10px 35px;
+    font-size: 15px;
+    border: 0;
+    background-color: rgb(53, 20, 72);
+    color: white;
+    width: 140px;
+    cursor: pointer;
+    bottom: 14px;
+    right: 18px;
+}
+
+/* Borrow */
+.borrow_history {
+    margin-top: 55px;
+    padding-left: 55px;
+    padding-bottom: 105px;
+}
+
+.borrow_history_head {
+    font-weight: 700;
+    text-align: left;
+    font-size: 43px;
+}
+
+.borrow_history_card_holder {
+    margin: 35px 0px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+}
+
+.borrow_history_main_card {
+    display: flex;
+    justify-content: left;
+    width: 95%;
+    height: 370px;
+    background-image: linear-gradient(120deg, rgb(0, 0, 81),rgb(63, 55, 86));
+}
+
+.left_borrow_card_history {
+    display: flex;
+    justify-content: center;
+    width: 35%;
+    overflow: hidden;
+}
+
+.right_borrow_card_history {
+    position: relative;
+    padding: 10px 35px;
+    padding-right: 0;
+    text-align: left;
+}
+
+.right_borrow_card_history1 {
+    width: 100%;
+}
+
+.borrow_card_name {
+    font-weight: 700;
+    font-size: 43px;
+}
+
+.date_borrow_card {
+    position: absolute;
+    right: 0;
+    top: 15px;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.right_borrow_card_history2 {
+    margin-top: 45px;
+    display: flex;
+    column-gap: 35px;
+    font-weight: 700;
+    font-size: 24px;
+}
+.right_borrow_card_history2 div{
+    width: 370px;
+    margin-right: 40px;
+}
+.right_borrow_card_history3 div{
+    width: 370px;
+    margin-right: 40px;
+}
+
+.borrow_small{
+    font-weight: 400;
+    font-size: 18px;
+}
+.right_borrow_card_history3 {
+    column-gap: 35px;
+    margin-top: 28px;
+    display: flex;
+    font-weight: 700;
+    font-size: 24px;
+}
+
+.right_borrow_card_history3 span {
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.portfolio_borrow_bttn{
+    margin-top: 35px;
+    padding: 10px 35px;
+    font-size: 18px;
+    border: 0;
+    background-color: rgb(84, 84, 140);
+    color: white;
+    width: 150px;
+    cursor: pointer;
 }
